Fix dark mode

--- a/src/containers/css/Block.css
+++ b/src/containers/css/Block.css
@@ -10,9 +10,37 @@
   align-items: center;
 }
 
+.blockDark {
+  padding-top: 50px;
+  padding-bottom: 80px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #212121;
+  height: calc(100vh - 65px);
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
 .blockContainer {
   border-width: 1px;
   background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #e7eaf3;
+  border-radius: .5rem;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 50px;
+  max-width: 1500px;
+  margin: 0px auto;
+  overflow: hidden;
+}
+
+.blockContainerDark {
+  border-width: 1px;
+  background-color: #212121;
   background-clip: border-box;
   border: 1px solid #e7eaf3;
   border-radius: .5rem;
