--- a/src/containers/css/Transaction.css
+++ b/src/containers/css/Transaction.css
@@ -4,6 +4,12 @@
   padding-bottom: 80px;
 }
 
+.transactionDark {
+  background-color: #212121;
+  padding-top: 50px;
+  padding-bottom: 80px;
+}
+
 .transactionContainer {
   border-width: 1px;
   background-color: #fff;
@@ -14,5 +20,16 @@
   max-width: 1500px;
   margin: 0 auto;
   overflow: hidden;
+}
 
+.transactionContainerDark {
+  border-width: 1px;
+  background-color: #212121;
+  background-clip: border-box;
+  border: 1px solid #e7eaf3;
+  border-radius: .5rem;
+  padding: 20px;
+  max-width: 1500px;
+  margin: 0 auto;
+  overflow: hidden;
 }
